--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,14 @@ body {
     font-size: 1.3em;
     margin: 0;
     padding: 0;
+    background-image: url("001-wood-melamine-subttle-pattern-background-pat.jpg");
+
+}
+
+input[type=text] {
+    background-color: rgba(255, 248, 220, 0.5);
+    border: solid rgba(171, 104, 66, 0.80) 1px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
 }
 
 #spiel-container, #dash-container {
@@ -10,8 +18,14 @@ body {
 }
 
 #spiel-container {
-    margin: 10px 0 0 10px;
+    margin: 3% 0 0 3%;
+
 }
+
+#canvas_container svg {
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+}
+
 
 #chat-container {
     margin-left: 20px;
@@ -23,9 +37,9 @@ body {
     overflow-y: scroll;
     width: 450px;
     padding: 6px;
-    background-color: #fff8dc;
+    background-color: rgba(255, 248, 220, 0.5);
     font-size: .75em;
-    border: solid #CCC 1px;
+    border: solid rgba(171, 104, 66, 0.80) 1px;
     border-bottom: none;
 }
 
@@ -35,9 +49,8 @@ body {
     font-size: .7em;
 }
 #chat-input {
-    border: solid #CCC 1px;
-    border-top-color:  #DDD;
-    background-color: rgba(255, 248, 220, 0.63);
+    border: solid rgba(171, 104, 66, 0.80) 1px;
+    background-color: rgba(255, 248, 220, 0.6);
     width: 450px;
     padding: 6px;
     font-size: .9em;
